updating and fixing